--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
 
         <div class="filter">
-          <i class="fas fa-search"></i>
+          <i class="fas fa-search"id="searchIcon"></i>
           <input
             type="text"
             class="form-input-filter"
